--- a/services/bifrost/bifrost.cfg
+++ b/services/bifrost/bifrost.cfg
@@ -19,10 +19,11 @@ minimum_value_eth = "0.00001"
 token_price = "1"
 
 [lumen]
-horizon_database_dsn = "postgres://root@localhost/horizon?sslmode=[sslmode]"
 account_public_key = "GDGVTKSEXWB4VFTBDWCBJVJZLIY6R3766EHBZFIGK2N7EQHVV5UTA63C"
 minimum_value_xlm = "10"
 memo_prefix = "bf:"
+token_price = "1"
+horizon_database_dsn = "postgres://root@localhost/horizon?sslmode=[sslmode]"
 
 [stellar]
 issuer_public_key = "GDGVTKSEXWB4VFTBDWCBJVJZLIY6R3766EHBZFIGK2N7EQHVV5UTA63C"
