one signer for all bf instances, fix issuer allow trust sign

--- a/services/bifrost/bifrost.cfg
+++ b/services/bifrost/bifrost.cfg
@@ -26,8 +26,9 @@ token_price = "1"
 horizon_database_dsn = "postgres://root@localhost/horizon?sslmode=[sslmode]"
 
 [stellar]
-issuer_public_key = "GDGVTKSEXWB4VFTBDWCBJVJZLIY6R3766EHBZFIGK2N7EQHVV5UTA63C"
-distribution_public_key = "GDGVTKSEXWB4VFTBDWCBJVJZLIY6R3766EHBZFIGK2N7EQHVV5UTA63C"
+issuer_secret_key = ""
+distribution_secret_key = ""
+channel_secret_key = ""
 signer_secret_key = "SAGC33ER53WGBISR5LQ4RJIBFG5UHXWNGTLG4KJRC737VYXNDGWLO54B"
 token_asset_code = "TOKE"
 needs_authorize = true
