add wait_for_signer_timeout; track account configurator errors in DB; update recovery transaction data for the same account in DB

--- a/services/bifrost/bifrost.cfg
+++ b/services/bifrost/bifrost.cfg
@@ -35,6 +35,8 @@ needs_authorize = true
 horizon = "https://horizon-testnet.stellar.org"
 network_passphrase = "Test SDF Network ; September 2015"
 starting_balance = "5"
+lock_unix_timestamp = 0
+wait_for_signer_timeout = 0
 
 [database]
 type="postgres"
